feat(backend): settings controller
