# backend/internal/app/app.go
@@ -2,6 +2,12 @@ package app
 
 import (
 	_ "api/cmd/docs"
+	"api/internal/controllers"
+	"api/internal/db"
+	"api/internal/repositories"
+	"api/internal/services"
+	"api/internal/services/config"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/swagger"
 )
@@ -9,11 +15,17 @@ import (
 func Run() {
 	app := fiber.New()
 
-	// define your routes here
+	database := db.NewMongoDb(config.MongoUrl)
 
 	api := app.Group("/api")
 
 	api.Get("/docs/*", swagger.HandlerDefault)
+
+	settings := api.Group("/settings")
+	settingsRepository := repositories.NewSettingsRepository(database)
+	settingsService := services.NewSettingsService(*settingsRepository)
+	settingsController := controllers.NewSettingsController(*settingsService)
+	settingsController.SetupRoutes(settings)
 
 	app.Listen(":8088")
 }
